centered the search barand designed the buttons

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -38,10 +38,29 @@
   box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.4);
 }
 
+.search-button {
+  margin-bottom: 6px;
+  border-radius: 3px;
+  line-height: 20px;
+  background-color: #FF4F4F;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 1.3em;
+  font-weight: 200;
+  color: white;
+  transition: .3s ease;
+  box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.4);
+}
+
+.search-button:hover{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 1);
+  background-color: #FF3d3d;
+}
+
 .banner-wagon-button:hover {
   text-decoration: none;
   color: rgba(255, 255, 255, 1);
-  padding: 7px 20px;
+  background-color: #FF3d3d;
 }
 
 .btn-show {
