--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top: 70px;">
 
 <% if @gyms == Gym.all %>
   <p> Désolé, nous n'avons pas trouvé de résultats a votre recherche </p>
