--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -66,3 +66,10 @@
     display: block;
   }
 }
+
+.search-form{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height:42px;
+}
