--- a/app/views/gyms/search.html.erb
+++ b/app/views/gyms/search.html.erb
@@ -1,6 +1,11 @@
 <div class="row">
   <div class="col-xs-12 col-md-7">
     <div class="cards-index">
+      <div class="error-message">
+        <% if @gyms == Gym.all %>
+          <p> Désolé, nous n'avons pas trouvé de résultats a votre recherche </p>
+        <% end %>
+      </div>
       <%= render "shared/cards" %>
     </div>
   </div>
