--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,25 +1,27 @@
-<div class="container login-container">
-  <div class="row">
-    <div class="col-xs-12 col-md-4 col-md-offset-4">
-      <div class="form-inputs">
+<div class="payment-wrapper">
+  <div class="container login-container">
+    <div class="row">
+      <div class="col-xs-12 col-md-4 col-md-offset-4">
+        <div class="form-inputs">
 
-        <h1>Achat d'une entrée <%= @booking.gym_sku %></h1>
-        <%= form_tag gym_booking_payments_path(@gym, @booking) do %>
-        <article>
-          <label class="amount">
-            <span>Amount: <%= humanized_money_with_symbol(@booking.amount) %></span>
-          </label>
-        </article>
+          <h1>Achat d'une entrée <%= @booking.gym_sku %></h1>
+          <%= form_tag gym_booking_payments_path(@gym, @booking) do %>
+          <article>
+            <label class="amount">
+              <span>Amount: <%= humanized_money_with_symbol(@booking.amount) %></span>
+            </label>
+          </article>
 
-        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-        data-name="<%= @gym.name %>"
-        data-email="<%= current_user.email %>"
-        data-description="Teddy <%= @booking.gym_sku %>"
-        data-amount="<%= @booking.amount_cents %>"
-        data-currency="<%= @booking.amount.currency %>"></script>
+          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-name="<%= @gym.name %>"
+          data-email="<%= current_user.email %>"
+          data-description="Teddy <%= @booking.gym_sku %>"
+          data-amount="<%= @booking.amount_cents %>"
+          data-currency="<%= @booking.amount.currency %>"></script>
 
-        <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
