--- a/app/assets/stylesheets/pages/_paymentnew.scss
+++ b/app/assets/stylesheets/pages/_paymentnew.scss
@@ -1,1 +1,12 @@
-_paymentnew.scss
+.payment-wrapper {
+  height: 90vh;
+  background-size: cover !important;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.payment-form {
+  padding: 20px
+}
