--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -19,6 +19,8 @@
   <div class="details hidden-xs hidden-sm hidden-md">
 
     <div class="details-title"> Description: <span class="description"> <%= @gym.description %> </span></div>
+    <div class="details-title">Cours: <span class="description">
+      <%= @gym.lessons %></span></div>
     <div class="details-title"> Services: <span class="services"> <%= @gym.services %> </span></div>
     <div class="details-title"> Equipements: <span class="equipments"> <%= @gym.equipments %> </span></div>
     <div class="details-title"> Photos:
