--- a/app/assets/stylesheets/pages/_gymshow.scss
+++ b/app/assets/stylesheets/pages/_gymshow.scss
@@ -36,10 +36,6 @@
   }
 }
 
-.details-title {
-  font-size: 20px;
-  margin-right: 40px;
-}
 
 .details {
   flex: 5;
@@ -137,6 +133,7 @@
 .description {
   font-weight: lighter;
   text-align: left;
+  padding-top: 20px;
 }
 
 
