--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,3 +54,11 @@
   font-size: 20px;
   font-weight:300;
 }
+
+.newsletter {
+  background-color: #f3f3f3;
+  padding: 30px 0px 75px 0px;
+  margin: 80px 420px;
+  border-radius: 5px;
+  box-shadow: 3px 9px 20px -6px rgba(8,8,8,1);
+}
