--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,3 +42,14 @@
    </div>
  </div>
 </div>
+
+  <div class="newsletter">
+    <div><h2 class="fancy-subtitle text-center">Abonnez-vous à notre <span style="color: #FFDD00; text-shadow: 1px 1px 1px rgba(0,0,0,0.5); font-weight: bolder; font-family: 'Alegreya Sans', sans-serif;" > newsletter</span></h2>
+      <%= simple_form_for(:emails, on: :collection, url: emails_path, method: :post) do |f| %>
+      <div class="search-form">
+        <%= f.input :email, label: false %>
+        <%= f.button :submit, "S'inscrire", class: "search-button" %>
+      <% end %>
+      </div>
+    </div>
+  </div>
