--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -56,9 +56,9 @@
 }
 
 .newsletter {
+  margin: 15px 0px;
   background-color: #f3f3f3;
-  padding: 30px 0px 75px 0px;
-  margin: 80px 420px;
+  padding: 15px;
   border-radius: 5px;
-  box-shadow: 3px 9px 20px -6px rgba(8,8,8,1);
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
 }
