--- a/app/views/layouts/gyms-app.html.erb
+++ b/app/views/layouts/gyms-app.html.erb
@@ -14,6 +14,7 @@
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
+  <%= favicon_link_tag(source= "favicon.png") %>
 </head>
 <body class="Site">
 
